--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,7 @@
-#input {
-  background-color: blueviolet;
+.right {
+  position: fixed;
+  right: 150px;
+  /* width: 200px;
+  height: 120px; */
+  /* border: 3px solid green; */
 }
