--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,7 @@
+@media screen and (max-width: 600px) {
+}
+
 .right {
   position: fixed;
   right: 150px;
-  /* width: 200px;
-  height: 120px; */
-  /* border: 3px solid green; */
 }
